5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1575_1559.log
== TEST (2019-03-13 12:52:07) 
-- CODE:
print(.upper("Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia.")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:54:01) 
-- CODE:
frase =("Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f51147209f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:54:10) 
-- CODE:
frase =("Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:54:20) 
-- CODE:
frase =("Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper())
-- EXECUTION TIME:
0.211752
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
